--- a/configs/task/simple_three_objectives.yaml
+++ b/configs/task/simple_three_objectives.yaml
@@ -1,5 +1,5 @@
 # 簡単なDNAタスク設定: 3つの目的関数
-_target_: dna_aptamer_mogfn.tasks.simple_dna.SimpleDNATask
+_target_: raptgfn.tasks.simple_dna.SimpleDNATask
 objectives:
   - length
   - gc_content
